--- a/feed.html
+++ b/feed.html
@@ -15,16 +15,17 @@
             <div class="logo-wrapper">
                 <img src="img/avalogo(blue).svg" alt="">
             </div>
+            <hr>
         </div>
         <div class="search">
             <form action="" method="get">
                 <input placeholder="Что будем искать?" type="text">
-                <button type="submit"></button>
+                <button type="submit">Найти</button>
             </form>
         </div>
         <div class="small-profile">
             <div class="small-profile-img-wrap">
-                <img src="" alt="">
+                <img src="img/avatars/jorik.jpg" alt="">
             </div>
             <h3>Имя Фамилия</h3>
             <p>Должность</p>
