--- a/map.html
+++ b/map.html
@@ -45,7 +45,7 @@
                     <div class="menu-img-wrapper">
                         <img src="img/icons/gg_feed.svg" alt="">
                     </div>
-                    <a href="feed.html">Лента</a>
+                    <a href="feed.php">Лента</a>
                 </div>
             </li>
             <li>
