Вывод записей на карту, изменение данных компании, управление записями в кабинете

--- a/settings.html
+++ b/settings.html
@@ -53,7 +53,7 @@
                     <div class="menu-img-wrapper">
                         <img src="img/icons/bx_bxs-cabinet.svg" alt="">
                     </div>
-                    <a href="cabinet.html">Кабинет</a>
+                    <a href="cabinet.php">Кабинет</a>
                 </div>
             </li>
             <li>
@@ -61,7 +61,7 @@
                     <div class="menu-img-wrapper">
                         <img src="img/icons/bx_bx-map.svg" alt="">
                     </div>
-                    <a href="map.html">Карта</a>
+                    <a href="map.php">Карта</a>
                 </div>
             </li>
             <li>
